--- a/webapp/index-no-applet-modernized.html
+++ b/webapp/index-no-applet-modernized.html
@@ -7,6 +7,36 @@
 <body>
 
 	<div class="applet" data-applet="applet.AppletExampleModernized" data-width="800" data-height="500">
+		<table style="width: 100%; height: 100%; position: absolute; left: 0px; right: 0px; z-index: 0;">
+			<tr>
+				<td style="width: 20%;"><input type="text" id="cmp0" style="width: 100%; height: 100%;"></td>
+				<td style="width: 20%;"><button id="cmp1" style="width: 100%; height: 100%;">0</button></td>
+				<td style="width: 20%;"><button id="cmp2" style="width: 100%; height: 100%;">1</button></td>
+				<td style="width: 20%;"><button id="cmp3" style="width: 100%; height: 100%;">2</button></td>
+				<td style="width: 20%;"><button id="cmp4" style="width: 100%; height: 100%;">3</button></td>
+			</tr>
+			<tr>
+				<td style="width: 20%;"><button id="cmp5" style="width: 100%; height: 100%;">4</button></td>
+				<td style="width: 20%;"><button id="cmp6" style="width: 100%; height: 100%;">5</button></td>
+				<td style="width: 20%;"><button id="cmp7" style="width: 100%; height: 100%;">6</button></td>
+				<td style="width: 20%;"><button id="cmp8" style="width: 100%; height: 100%;">7</button></td>
+				<td style="width: 20%;"><button id="cmp9" style="width: 100%; height: 100%;">8</button></td>
+			</tr>
+			<tr>
+				<td style="width: 20%;"><button id="cmp10" style="width: 100%; height: 100%;">9</button></td>
+				<td style="width: 20%;"><button id="cmp11" style="width: 100%; height: 100%;">add</button></td>
+				<td style="width: 20%;"><button id="cmp12" style="width: 100%; height: 100%;">sub</button></td>
+				<td style="width: 20%;"><button id="cmp13" style="width: 100%; height: 100%;">mul</button></td>
+				<td style="width: 20%;"><button id="cmp14" style="width: 100%; height: 100%;">div</button></td>
+			</tr>
+			<tr>
+				<td style="width: 20%;"><button id="cmp15" style="width: 100%; height: 100%;">mod</button></td>
+				<td style="width: 20%;"><button id="cmp16" style="width: 100%; height: 100%;">clear</button></td>
+				<td style="width: 20%;"><button id="cmp17" style="width: 100%; height: 100%;">EQ</button></td>
+				<td style="width: 20%;"></td>
+				<td style="width: 20%;"></td>
+			</tr>
+		</table>
 	</div>
 
 </body>
